Fix z-index of navigation grid to prevent overlapping from 2d map UI

--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -76,6 +76,7 @@ nav{
 nav.open{
   top: 0;
   box-shadow: 0px 5px 7px 0px rgba(0,0,0,0.50);
+  z-index: 1001;
 }
 
 #close-navigation{
